--- a/namari.css
+++ b/namari.css
@@ -19,35 +19,30 @@ body {
   margin: auto;
   width: 100%;
   padding: 30px;
-  /* Small devices (portrait tablets and large phones, 600px and up) */
-  /* Medium devices (landscape tablets, 768px and up) */
-  /* Large devices (laptops/desktops, 992px and up) */
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-}
-@media only screen and (min-width: 640px) {
-  .container {
-    max-width: 640px;
+  /* Small devices (portrait tablets and large phones, 600px and up) 
+  @media only screen and (min-width: 640px) {
+      max-width: 640px;
   }
-}
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
+
+  /* Medium devices (landscape tablets, 768px and up) 
+  @media only screen and (min-width: 768px) {
+      max-width: 768px;
   }
-}
-@media only screen and (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
+
+  @media only screen and (min-width: 1024px) {
+      max-width: 1024px;
   }
-}
-@media only screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
+
+  /* Large devices (laptops/desktops, 992px and up) 
+  @media only screen and (min-width: 1280px) {
+      max-width: 1280px;
   }
-}
-@media only screen and (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
+
+  /* Extra large devices (large laptops and desktops, 1200px and up) 
+  @media only screen and (min-width: 1536px) {
+      max-width: 1536px;
+  } 
+  */
 }
 
 .intro {
@@ -117,7 +112,7 @@ body {
     width: 100%;
   }
 }
-@media only screen and (max-width: 470px) {
+@media only screen and (max-width: 370px) {
   .intro__main__text {
     padding-top: 250px;
   }
@@ -148,18 +143,29 @@ body {
 }
 
 .about {
-  background-color: red;
-  height: 100%;
+  background-color: white;
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
 }
 .about__content {
   align-items: center;
   display: flex;
+  justify-content: space-between;
   height: 100%;
 }
 @media only screen and (max-width: 765px) {
   .about__content {
     flex-direction: column;
   }
+}
+@media only screen and (max-width: 300px) {
+  .about__content {
+    margin-top: 150px;
+  }
+}
+.about__content__definition {
+  margin-right: 50px;
 }
 .about__content__definition h5 {
   font-size: 14px;
@@ -198,4 +204,369 @@ body {
   line-height: 25px;
   margin-top: 20px;
   font-size: 18px;
+}
+
+.gallery {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+}
+.gallery__content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.gallery__content__item {
+  position: relative;
+  width: 400px;
+  box-sizing: border-box;
+}
+.gallery__content__item__img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+@media only screen and (max-width: 330px) {
+  .gallery__content__item__img {
+    width: 300px;
+  }
+}
+.gallery__content__item__overlay {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  justify-content: center;
+  align-items: center;
+  color: #d2b356;
+  transition: 0.2s;
+  transform: scale(0);
+  opacity: 0;
+  display: flex;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.gallery__content__item__overlay i {
+  transition: 0.2s linear;
+  cursor: pointer;
+}
+.gallery__content__item:hover .gallery__content__item__overlay {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.services {
+  min-height: 100vh;
+}
+.services__content {
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 470px) {
+  .services__content {
+    flex-direction: column;
+  }
+}
+.services__content__testimonial {
+  margin-right: 60px;
+  text-align: right;
+}
+@media only screen and (max-width: 470px) {
+  .services__content__testimonial {
+    margin-bottom: 20px;
+    text-align:left;
+  }
+}
+.services__content__testimonial p {
+  font-size: 20px;
+}
+.services__content__testimonial .customer {
+  font-size: 18px;
+  padding-top: 12px;
+}
+.services__content__info h3 {
+  font-size: 14px;
+  color: #ccc;
+  letter-spacing: 2px;
+  padding-bottom: 15px;
+}
+.services__content__info h2 {
+  font-size: 34px;
+  padding-bottom: 40px;
+}
+.services__content__info p {
+  padding-bottom: 30px;
+  font-size: 18px;
+  line-height: 150%;
+}
+.services__content__info .subtitle {
+  color: #9c9c9c;
+}
+.services__content__info button {
+  padding: 15px 20px;
+  margin-top: 15px;
+  color: black;
+  background: transparent;
+  font-weight: bold;
+  font-size: 16px;
+  border: 3px solid black;
+}
+.services__content__info button:hover {
+  color: #d2b356;
+  transition: 0.5s ease;
+  border: 2px solid #d2b356;
+  cursor: pointer;
+}
+@media only screen and (max-width: 1000px) {
+  .services__content__img img {
+    display: none;
+  }
+}
+
+.testimonial{
+  min-height: 70vh;
+}
+.testimonial__content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.testimonial__content__heading{
+  text-align: center;
+  margin-bottom: 50px;
+}
+.testimonial__content__heading h3{
+  font-size: 14px;
+  color: #ccc;
+  letter-spacing: 2px;
+  margin-bottom: 15px;
+}
+.testimonial__content__heading h2{
+  font-size: 34px;
+}
+.testimonial__content__customers{
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 770px) {
+  .testimonial__content__customers{
+    flex-direction: column;
+  }
+}
+
+
+.testimonial__content__customers__item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 30px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .testimonial__content__customers__item{
+    margin-top: 40px;
+  }
+}
+.testimonial__content__customers__item__img{
+  width: 50px;
+  padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+  
+  
+}
+.testimonial__content__customers__item__img img{
+  max-width: 100px;
+  height: auto;
+  border-radius: 100%;
+}
+.testimonial__content__customers__item__text{
+  text-align: center;
+  padding-top: 20px;
+  line-height: 170%;
+}
+.testimonial__content__customers__item__text p{
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+.testimonial__content__customers__item__text .name{
+  
+}
+
+.client__content{
+  display: flex;
+}
+@media only screen and (max-width: 770px) {
+  .client__content{
+    flex-direction: column;
+  }
+}
+.client__content__text{
+  margin-right: 20px;
+}
+.client__content__text h5{
+  font-size: 14px;
+  color: #ccc;
+            
+}
+.client__content__text h3{
+  font-size: 34px;
+  margin-top: 30px;
+}
+.client__content__text p{
+  color: #9c9c9c;
+  font-size: 16px;
+  line-height: 25px;
+  margin-top: 30px; 
+}
+.client__content__cards{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.client__content__cards__trio{
+  display: flex;
+}
+@media only screen and (max-width: 470px) {
+  .client__content__cards__trio{
+    flex-direction: column;
+  }
+}
+.client__content__cards__item{
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.client__content__cards__item__img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+.client__content__cards__item__img img{
+  
+}
+.client__content__cards__item__overlay{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  color: white;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  transition: 0.2s;
+  transform: scale(0);
+  opacity: 0;
+  display: flex;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.client__content__cards__item__overlay p{
+  transition: 0.2s linear;
+}
+.client__content__cards__item:hover .client__content__cards__item__overlay {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.pricing{
+  background-color: #f5f5f5;
+}
+.pricing__content{
+  display: flex;
+  flex-direction: column  ;
+  align-items: center;
+}
+.pricing__content__heading{
+  text-align: center;
+  margin-bottom: 30px;
+}
+.pricing__content__heading h3{
+  font-size: 14px;
+  color: #ccc;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+
+}
+.pricing__content__heading h2{
+  font-size: 34px
+}
+
+.pricing__content__cards{
+  display: flex;
+  justify-content:space-between ;
+}
+@media only screen and (max-width: 770px) {
+  .pricing__content__cards{
+    flex-direction: column;
+  }
+}
+.pricing__content__cards__item{
+  text-align: center;
+  margin: 30px;
+  background-color: white;
+  
+}
+.pricing__content__cards__item h3{
+  font-size: 17px;
+  margin-bottom: 10px;
+  margin-top: 50px;
+}
+.pricing__content__cards__item p{
+  font-size: 15px;
+  color: #ccc;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+.pricing__content__cards__item ul{
+  margin-top: 40px;
+
+}
+.pricing__content__cards__item li{
+  list-style: none;
+  font-size: 15px;
+  padding: 14px 0;
+  border-bottom: 1px solid #f5f5f5;
+}
+.pricing__content__cards__item button{
+  padding: 11px 16px;
+  margin-top: 15px;
+  color: black;
+  background: transparent;
+  font-weight: bold;
+  font-size: 14px;
+  border: 3px solid black;
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+.pricing__content__cards__item button:hover {
+  color: #d2b356;
+  transition: 0.5s ease;
+  border: 2px solid #d2b356;
+  cursor: pointer;
+}
+.pricing__content__cards__item__box{
+  margin: 14px;
+  padding: 30px;
+  background-color: #f5f5f5;
+  margin-top: 40px;
+}
+.pricing__content__cards__item__box p{
+  
+}
+.pricing__content__cards__item__box__price{
+  display: flex;
+  justify-content: center;
+  
+  
+}
+.pricing__content__cards__item__box__price span{
+  font-size: 22px
+}
+.pricing__content__cards__item__box__price h4{
+  font-size: 62px;
 }
